2003-09-09  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-utils/dialog-transfer.c:  during the dialog startup it
	  tries to build the transfer rate.  This crashes on Solaris because
	  during startup one commodity is still NULL when it tries to print
	  it.
	Fixes bug #121677

	* src/engine/engine-helpers.c:  turn off scheme garbage collection
	  during query->scm and scm->query conversion.  It shaves about 50%
	  off the test-scm-query-string tests.
	* src/engine/test-core/test-engine-stuff.c:  add some code to help
	  track down what the get_random_query() is doing.  Turned off by
	  default.
	* src/app-utils/test/test-scm-query-string.c: make the test
	  deterministic by seeding the RNG with a known value.  There is a
	  known "delay" at #245 with a seed of 1 on Linux systems.

2003-09-04  Derek Atkins  <derek@ihtfp.com>

	Apply Nigel Titley's patch to fix #103174:
	* src/register/register-core/basiccell.c:
	  - add some debugging messages
	  - don't kill ourself if we're asked to set the value to our own value.

	Description of the problem from Nigel:
	
	The problem is that the SX formula_cell stuff calls (via an
	intermediate step) 

	gnc_basic_cell_set_value_internal (BasicCell *cell, const char *value)

	with value pointing at cell->value. The overall effect of this as far
	as gnc_basic_cell_set_value_internal is concerned is to trash the value
	stored in cell->value *before* re-writing back to the same place (the
	g_free() writes memory management stuff in the first few bytes of the
	value). This is what trashes the debit/credit value in the SX register
	entry.
	
2003-08-29  David Hampton  <hampton@employees.org>

	* src/engine/Account.c: Fix bug in computing cleared balance.  The
	bug was introdiced 4/1.

	* lots of scm files: Remove the RCS "Id:" tag.  Its a PITA when
	syncing between branches.

2003-08-28  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/import-backend.c: Aaarg. Fixed extremely